@@ -2630,23 +2630,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkCheckButton" id="cfg_keep_backups">
-				  <property name="visible">True</property>
-				  <property name="can_focus">True</property>
-				  <property name="label" translatable="yes">Keep a backup of the iTunesDB in ~/.gtkpod/</property>
-				  <property name="use_underline">True</property>
-				  <property name="relief">GTK_RELIEF_NORMAL</property>
-				  <property name="focus_on_click">True</property>
-				  <property name="active">False</property>
-				  <property name="inconsistent">False</property>
-				  <property name="draw_indicator">True</property>
-				  <signal name="toggled" handler="on_cfg_keep_backups_toggled" last_modification_time="Sat, 04 Jan 2003 16:44:32 GMT"/>
-				</widget>
-				<packing>
-				  <property name="padding">0</property>
-				  <property name="expand">False</property>
-				  <property name="fill">False</property>
-				</packing>
+				<placeholder/>
 			      </child>
 
 			      <child>
